--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "mocha": "^5.2.0"
     },
     "dependencies": {
+        "cheerio": "^1.0.0-rc.2",
         "koa": "^2.5.2",
         "koa-cors": "0.0.16",
         "koa-response-time": "^2.0.0",
